--- a/assets/sass/shared.scss
+++ b/assets/sass/shared.scss
@@ -69,6 +69,7 @@ body {
   padding: 0 40px;
   color: $foreground-body;
   font: $text-L;
+  font-feature-settings: 'palt';
   letter-spacing: 0.04em;
 
   @include break('tablet') {
